#3: Made changes to styling and sizing of chart container, to ensure that adding a legend will handle graceful placement and resizing of existing chart. This clears a number of TODOs and compromises on some sizing calculations :) The only compromise left is on the height of the chart where it's been observed that if we use 100% with overflow, then we always get a scrollbar, so this is not ideal but works well with everything we're doing.

--- a/style/visual.less
+++ b/style/visual.less
@@ -27,3 +27,7 @@
     fill: none;
     pointer-events: all;
 }
+
+.cartesianLineChart {
+    position: absolute;
+}
